--- a/NEWS
+++ b/NEWS
@@ -65,9 +65,15 @@ V0.6    03-06-2008
       Skip & report unreadable blocks rather than just exiting.
       Fix crash when skipping already existing vob files.
 
-V0.6.1  20-06-2008
+V0.7  21-07-2008
 
     Kevin Veroneau <kveroneau@yourwinnipeg.net>:
       Provided disc images and testing to better support
       extracting labels from LG V1.1 discs which have unusual
       identification of program titles.
+    Bruce Jerrick <bmj001@ippimail.com>:
+      Fix munmap() issue where memory wasn't unmapped correctly.
+      Rename structure members in code to aid understanding.
+    P@draigBrady.com
+      Include a more efficient data streaming method, which
+      may be used in future.
