--- a/NEWS
+++ b/NEWS
@@ -25,7 +25,7 @@ V0.4    14-11-2007
       Report 480x480 resolution discs, and do better reporting
       for unknown resolutions.
     Peter Van Hove <Peter@Smart-Projects.net>:
-      support program label extraction with example code
+      Support program label extraction with example code
       and nero generated disc images.
     Craig T. Snydal <ctsnydal@cantab.net>:
     Rafa Couto <rafacouto@gmail.com>:
@@ -54,14 +54,14 @@ V0.5.1  10-04-2008
 
     P@draigBrady.com:
       Fix error pointed out by Kyosuke Tokoro where random
-      trailing characters could be printed after each title.
+       trailing characters could be printed after each title.
 
 V0.6    03-06-2008
 
     P@draigBrady.com:
       Support text encoding of ISO-8859-1 as well as SHIFT-JIS.
       Support finding labels on discs that don't write full
-      info about programs contained in each program set.
+       info about programs contained in each program set.
       Skip & report unreadable blocks rather than just exiting.
       Fix crash when skipping already existing vob files.
 
@@ -94,10 +94,24 @@ V0.8.1  09-11-2008
 
     P@draigBrady.com:
       Fix a string comparison compile warning which was _not_
-      issued on linux with gcc 4.1.2 or Max OS X at least.
+       issued on linux with gcc 4.1.2 or Max OS X at least.
 
 V0.8.4  20-11-2008
 
     তন্ময় ভট্টাচার্য্য <tanmoy@mindspring.com>:
       Work around older gcc toolchains overwriting /dev/null
       Change Makefile to use `cp -p` not `cp -a` for Mac OS X.
+
+V0.9    23-02-2009
+
+    Kyosuke Tokoro <altair8800@livedoor.com>:
+      Output program numbers so one can easily know what
+       to pass as the correct index to the -p option.
+    P@draigBrady.com:
+      Fix error reported by Antoni Kasper <agkasper@pacific.net.au>
+       where extracting VOBs starting after 4.2GB into a VRO file,
+       would actually extract video within the 4.2GB (2^32) range.
+      Remove compiler warnings on systems without iconv support.
+      Allow specifying CFLAGS parameter to `make`.
+      Modify video to apply aspect ratio from IFO index file.
+      Modify video to use more standard aspect ratio encoding.
