--- a/NEWS
+++ b/NEWS
@@ -120,3 +120,13 @@ V0.9.1  25-02-2009
 
     তন্ময় ভট্টাচার্য্য <tanmoy@mindspring.com>:
       Fix compilation on Max OS X (CHAR_BIT requires limits.h)
+
+V0.9.3  15-10-2009
+
+    P@draigBrady.com:
+      Identify the system charset better on cygwin 1.5 which
+       doesn't support the standard codset determination mechanism.
+       Reported by http://pythonlife.seesaa.net/
+      Identify and abort extracting CPRM encrypted discs.
+       Report and sample disc from Stephen Stewart <funaki2008@googlemail.com>
+      Don't override CC environment variable so that ccache, clang, etc. work
