--- a/NEWS
+++ b/NEWS
@@ -119,7 +119,7 @@ V0.9    23-02-2009
 V0.9.1  25-02-2009
 
     তন্ময় ভট্টাচার্য্য <tanmoy@mindspring.com>:
-      Fix compilation on Max OS X (CHAR_BIT requires limits.h)
+      Fix compilation on Mac OS X (CHAR_BIT requires limits.h)
 
 V0.9.3  15-10-2009
 
@@ -130,3 +130,18 @@ V0.9.3  15-10-2009
       Identify and abort extracting CPRM encrypted discs.
        Report and sample disc from Stephen Stewart <funaki2008@googlemail.com>
       Don't override CC environment variable so that ccache, clang, etc. work
+
+V0.9.4  15-02-2010
+
+    Helen Buss <mythtv@hbuus.com>:
+      Fix compilation on cyqwin without libiconv (always include langinfo.h).
+      Report and provided sample disc image for CPRM misdetection.
+    Alexander Skwar <alexander@skwar.name>:
+      Add support for building Mac OS X universal binaries.
+    P@draigBrady.com:
+      Fix CPRM detection, which must be done per program rather than per disc.
+      Fix label (program set) identification on discs that indicate
+       programs other than the first in the set as the first program to play.
+       Report and sample disc from Markus Laker <markus@mnslaker.f9.co.uk>.
+      Added a "[label]" parameter to the --name option,
+       to generate (sanitized) file names based on the title, or label.
